--- a/style.css
+++ b/style.css
@@ -83,3 +83,26 @@ a {
     -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+.body::-webkit-scrollbar {
+    display: none;
+} 
+
+.body {
+    overflow-y: auto; /* Enable scrolling for overflowing content */
+    -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+body {
+    animation: fadeIn 1.0s ease-in-out;
+}
